--- a/ionic/storage/package.json
+++ b/ionic/storage/package.json
@@ -17,10 +17,12 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor/android": "5.1.1",
     "@capacitor/app": "5.0.5",
     "@capacitor/core": "5.1.1",
     "@capacitor/haptics": "5.0.5",
